# nsu_concurrency_theory

./: .gitignore  CMakeLists.txt  Makefile  README.md  task1.cpp
task2/: specs.txt
task2/1/: Makefile  main.cpp
task2/2/: main.cpp
task2/3/: Makefile  Out_task32.txt  Out_task33.txt  main.cpp  task31.cpp  task32.cpp  task33.cpp
task2/graphs/: Makefile
task2/graphs/1/: task1.cpp
task2/graphs/2/: Makefile  task2.cpp
task2/graphs/3/: Out_task31.txt  build_graphs.py  task31.txt  task32.txt
task3/1/: Makefile  task1.cpp
task3/2/: Makefile  Power.txt  Sinus.txt  Square.txt  task2.cpp
task4/: Makefile  task4.py
task5/: Makefile  main.py
task6/: Makefile  README.md  report1.nsys-rep  report1.sqlite  task6.cpp  task6_openacc.cpp  task_cpu  task_cpu.cpp  task_gpu  task_gpu.cpp  task_gpu_optim1  task_gpu_optim1.cpp  task_gpu_optim2  task_gpu_optim2.cpp  task_gpu_optim3  task_gpu_optim3.cpp  task_multicore
task7/: Makefile  gpu_cublas.cpp
task8/: Makefile  gpu_cub  gpu_cub.cpp  gpu_cub.cu
